# predicate-authority

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: phase1-ci-and-release.yml  tests.yml  update-sidecar-version.yml
docs/: authorityd-operations.md  better-sdk-opportunity-proposal.md  caracal-analysis.md  caracal-codebase-overview.md  northstar.md  predicate-authority-user-manual.md  predicate-sdk-verification-analysis.md  pypi-release-guide.md  roadmap.md
examples/: README.md  README_Entra.md  README_OIDC.md  README_Okta.md  authority_client_local_policy.yaml  authority_client_local_yaml.py  browser_guard_example.py  mcp_tool_guard_example.py  outbound_http_guard_example.py
examples/authorityd/: daemon_endpoint_check.py  policy.json
examples/delegation/: delegate.py  entra_obo_compat_demo.py  oidc_compat_demo.py  okta_obo_compat_demo.py  policy.yaml  worker.py
predicate_authority/: README.md  __init__.py  bridge.py  cli.py  client.py  control_plane.py  daemon.py  entra_compat.py  errors.py  guard.py  local_identity.py  mandate.py  metrics.py  oidc_compat.py  okta_compat.py  policy.py  policy_source.py  proof.py  pyproject.toml  rate_limit.py  revocation.py  sidecar.py  sidecar_binary.py  sidecar_client.py  sidecar_store.py  telemetry.py
predicate_authority/integrations/: __init__.py  sdk_python.py
predicate_authority/verify/: __init__.py  comparators.py  types.py  verifier.py
predicate_authority_sidecar/: README.md  __init__.py  pyproject.toml
predicate_contracts/: README.md  __init__.py  canonicalization.py  models.py  protocols.py  pyproject.toml
scripts/: check_no_plaintext_okta_secrets.py  validate_release_tag.py  verify_release_order.py
tests/: test_authority_client_local_yaml.py  test_canonicalization.py  test_cli_phase2.py  test_control_plane_integration.py  test_daemon_phase2.py  test_delegation_simulation.py  test_entra_obo_compatibility.py  test_execute.py  test_identity_bridge_phase2.py  test_local_identity_registry.py  test_mandate_signer.py  test_oidc_compatibility.py  test_okta_obo_compatibility.py  test_policy_and_guard.py  test_proof_ledger.py  test_sdk_python_integration.py  test_sidecar_phase2.py  test_sidecar_store.py  test_telemetry.py  test_verify.py
