[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predicate-authority-sidecar"
version = "0.3.8"
description = "Predicate Authority Sidecar binary installer (downloads on install)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT OR Apache-2.0"
authors = [{ name = "Predicate Systems" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "predicate-authority>=0.4.0",
]

[project.urls]
Documentation = "https://www.PredicateSystems.ai/docs"
Repository = "https://github.com/PredicateSystems/predicate-authority-sidecar"

[tool.setuptools]
packages = ["predicate_authority_sidecar"]

[tool.setuptools.package-dir]
"predicate_authority_sidecar" = "."
